Fixed english letter test
fixed english letter I test now checks data and removed loop